examples/failing/DeclConflictCtorCtor.purs
-- @shouldFailWith DeclConflict
module Main where

data T1 = Fail

data T2 = Fail
